src/project/manifest/snapshots/pixi__project__manifest__system_requirements__tests__unknown_key.snap
---
source: src/project/manifest/system_requirements.rs
expression: "\n        [system-requirements]\n        lib = \"2.12\"\n        "
---
TOML parse error at line 3, column 9
  |
3 |         lib = "2.12"
  |         ^^^
unknown field `lib`, expected one of `macos`, `linux`, `cuda`, `libc`
